--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ layout: default
 title: 404
 ---
  
-<img class="image-404" src="{{site.baseurl}}/assets/imgpsh_fullsize.png" alt="Point at search">
+<img class="image-404" src="{{site.github.url}}/assets/imgpsh_fullsize.png" alt="Point at search">
 
 ##Welcome to Testdroid Cloud Online Documentation!
 
